// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInformations /> should render 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c6 {
  display: block;
  margin-bottom: 0.4rem;
  font-size: 1.6rem;
  cursor: pointer;
}

.c7 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c4 {
  margin: 2rem 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.4rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Statut du salarié
    </h2>
  </header>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.ancienneté"
    >
      Quelle est l'ancienneté du salarié ?
    </label>
    <label
      class="c6"
    >
      Choissisez parmi les catégories d'ancienneté telles que définies par la convention collective
    </label>
    <select
      class="c7"
      id="input-criteria.ancienneté"
      name="criteria.ancienneté"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="13| moins de 6 mois"
      >
        moins de 6 mois
      </option>
      <option
        value="31| 6 mois à moins de 2 ans"
      >
        6 mois à moins de 2 ans
      </option>
      <option
        value="41| plus de 2 ans"
      >
        plus de 2 ans
      </option>
    </select>
  </div>
</div>
`;

exports[`<StepInformations /> should render catégorie 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c6 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c4 {
  margin: 2rem 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Statut du salarié
    </h2>
  </header>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.catégorie socio-professionnelle"
    >
      Quelle est la catégorie professionnelle du salarié ?
    </label>
    <select
      class="c6"
      id="input-criteria.catégorie socio-professionnelle"
      name="criteria.catégorie socio-professionnelle"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="4| Ouvriers"
      >
        Ouvriers
      </option>
      <option
        value="16| Employés"
      >
        Employés
      </option>
      <option
        value="23| Agents de maîtrise"
      >
        Agents de maîtrise
      </option>
      <option
        value="28| Techniciens"
      >
        Techniciens
      </option>
      <option
        value="60| Ingénieurs, Cadres"
      >
        Ingénieurs, Cadres
      </option>
    </select>
  </div>
</div>
`;

exports[`<StepInformations /> should render groupe 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c6 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c4 {
  margin: 2rem 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Statut du salarié
    </h2>
  </header>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.catégorie socio-professionnelle"
    >
      Quelle est la catégorie professionnelle du salarié ?
    </label>
    <select
      class="c6"
      id="input-criteria.catégorie socio-professionnelle"
      name="criteria.catégorie socio-professionnelle"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="4| Ouvriers"
      >
        Ouvriers
      </option>
      <option
        value="16| Employés"
      >
        Employés
      </option>
      <option
        value="23| Agents de maîtrise"
      >
        Agents de maîtrise
      </option>
      <option
        value="28| Techniciens"
      >
        Techniciens
      </option>
      <option
        value="60| Ingénieurs, Cadres"
      >
        Ingénieurs, Cadres
      </option>
    </select>
  </div>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.groupe"
    >
      Dans quel groupe professionnel le salarié se situe-t-il ?
    </label>
    <select
      class="c6"
      id="input-criteria.groupe"
      name="criteria.groupe"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="6| IV"
      >
        IV
      </option>
    </select>
  </div>
</div>
`;
